--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ div {
 }
 
 #info {
-    font-size: 72px;
+    font-size: 42px;
     display: none;
 }
 
@@ -52,12 +52,22 @@ div {
 #print-box {
     background-color: rgb(255, 250, 235);
     height: 90%;
+    font-size: 20px;
 }
 
 #print-box p {
     margin: 0;
     padding: 0;
     color: rgb(19, 19, 19);
-    font-size: 20px;
     font-style: italic;
+}
+
+#correct-words {
+    font-size: 150px;
+}
+
+textarea {
+    height: 300px;
+    width: 1200px;
+    font-size: 16px;
 }
